# han-saku-zephyr

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: __init__.py  config.py  health.py  index.cgi
app/commands/: db_commands.py
app/models/: __init__.py  base.py
app/models/auth/: user.py
app/models/documents/: file.py
app/templates/: base.html  index.html
app/views/: __init__.py  main.py
app/views/main/: __init__.py  routes.py
db/migrations/: 02_create_tables.sql
docs/: TECHNICAL_SPECIFICATION.md
migrations/sql/: 01_create_schemas.sql  02_create_tables.sql  03_insert_datas.sql
tests/: conftest.py  test_app.py  test_conftest.py
