[tool.poetry]
name = "han-saku-zephyr"
version = "0.1.0"
description = "A simple Flask application with MySQL"
authors = ["Your Name <your.email@example.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "3.8.20"
flask = "3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pymysql = "^1.1.0"
cryptography = "^41.0.5"  # pymysqlに必要
google-api-python-client = "^2.154.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
flask-login = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
